# Multi-Agent-Research-Lab

./: .gitignore  MakeFile  README.md  docker-compose.langfuse.yml  drawio.txt  gemini.txt  ingest.py  main.py  pyproject.toml  test.py
src/: graph.py  llm_config.py  nodes.py  state.py
src/models/: __init__.py  loader.py
src/rag/: vector_store.py
src/tools/: search.py
