[project]
name = "multi-agent-research-lab"
version = "0.1.0"
description = ""
authors = [
    {name = "JavierRodriguezFontiveros",email = "javierrodriguezfontiveros@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "python-dotenv>=1.0.1",
    "langchain>=0.2.0,<0.3.0",           
    "langchain-community>=0.2.0,<0.3.0", 
    "langgraph>=0.2.0",
    "langchain-ollama>=0.1.0",           
    "langfuse>=2.0.0,<2.33.0",
    "transformers>=4.40,<5.0",
    "accelerate>=0.27",
    "torch>=2.2,<3.0",
    "langchain-core>=0.2.0,<0.3.0"       
]
[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"